<resources>
    <string name="app_name">Wasor</string>
    <string name="first_title">Phân loại rác sinh hoạt</string>
    <string name="second_title">Cải thiện môi trường</string>
    <string name="third_title">Nâng cao ý thức của bản thân</string>
    <string name="first_description">Dễ dàng sử dụng, ứng dụng có thể phân loại các loại rác và đưa ra giải pháp xử lý cho từng loại rác</string>
    <string name="second_description">Phân loại rác tại nguồn giúp giảm thiểu ô nhiễm, bảo vệ môi trường, tiết kiệm chi phí thu gom, vận chuyển, xử lý </string>
    <string name="third_description">Thực hiện phân loại rác thải thường xuyên để sửa đổi thói quen và làm gương cho người xung quanh</string>
    <string name="placeholder_search">Nhập tên rác thải</string>
    <string name="phan_loai_rac">Phân loại rác bằng hình ảnh</string>
    <string name="search_by_ten">Tìm kiếm theo tên</string>
    <string name="ex1">Thu gom và đem đến các điểm thu gom tại địa phương. Các điểm thu gom pin: - Các cơ sở Vinmart+ toàn quốc - Tại Hồ Chí Minh 1. Sở Tài nguyên - Môi trường, 63 Lý Tự Trọng, Bến Nghé, Quận 1, TP.HCM 2. MM MEGA MARKET An Phú, Song Hành, Thảo Điền, Quận 2, TP.HCM 3. UBND phường 15, quận 4, 153 Tôn Thất Thuyết, Phường 16, Quận 4, TP.HCM 4. UBND phường 17, quận Phú Nhuận, 22 Nguyễn Văn Trỗi, Phường 17, Phú Nhuận, TP.HCM 5. UBND phường 2, quận Bình Thạnh, 14 Phan Bội Châu, Phường 2, Bình Thạnh, TP.HCM 6. Cty Hanel Trading, Số 260A Điện Biên Phủ , Phường 7, Quận 3, Tp Hồ Chí Minh 7. Trung tâm bảo hành Cannon Lê Bảo Minh, 95B-97-99 Trần Hưng Đạo, Q.1, TP. HCM 8. Big C 99 Nguyễn Thị Thập, P. Tân Phú, Q.7 9. Công ty BK Solar, 47 Lê Văn Thịnh q.2 - Tại Hà Nội 1. UBND phường Thành Công, số 9 đường Thành Công (Thành Công, Ba Đình) 2. UBND Phường Tràng Tiền, số 2 Cổ Tân, Hoàn Kiế 3. UBND phường Quán Thánh, số 12-14 đường Phan Đình Phùng (Quán Thánh, Ba Đình) 4. Nhà văn hóa phường Nghĩa Tân, đối diện số 45 phố Nghĩa Tân (phường Nghĩa Tân, Cầu Giấy) 5. Chi cục bảo vệ môi trường, 17 Trung Yên 3, Cầu giấy 6. Cty Hanel Trading, Số 2 Chùa Bộc, Phường Láng Hạ, Quận Đống Đa, Hà Nội 7. Trung tâm bảo hành Cannon Lê Bảo Minh, 130A Giảng Võ, Ba Đình - Tại Đà Nằng 1. K574/24 Trưng Nữ Vương phường Hòa Thuận Tây, quận Hải Châu 2. Cà phê và thư viện sách The Books (số 12 đường Cao Thắng, phường Thanh Bình, quận Hải Châu) 3. Trung tâm Anh ngữ DUTI English (số 231 đường Kinh Dương Vương, phường Hòa Minh, quận Liên Chiểu) 4. Tầng 2 của siêu thị Big C (Số 225-227 đường Hùng Vương, phường Vĩnh Trung, quận Thanh Khê)</string>
    <string name="ex2">Chất thải nguy hại là chất thải chứa yếu tố độc hại, phóng xạ, lây nhiễm, dễ cháy, dễ nổ, gây ăn mòn, gây ngộ độc hoặc có đặc tính nguy hại khác.</string>
    <string name="camera">Cho phép truy cập Camera</string>
    <string name="camera_desc">Ứng dụng cần quyền Camera hoặc thư viện ảnh để tiếp tục</string>
    <string name="clasify_button">Chọn cách phân loại</string>
</resources>
